chore: remove debug logs
